# medusa-gen-rs

./: .gitignore  Cargo.toml  IDEAS.md  README.md  readme.MD
src/: cli.rs  lib.rs  parser.rs  types.rs
templates/: contract.sol
