[package]
authors = ["simon-something", "Wonderland"]
name = "medusa-gen"
description = "Generate a set of contracts for Medusa tests"
homepage = "https://github.com/defi-wonderland/medusa-gen-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/defi-wonderland/medusa-gen-rs"
license = "MIT"
readme = "readme.MD"
keywords = ["medusa", "solidity", "fuzzing", "template"]
categories = ["command-line-utilities"]

[lib]
name = "medusa_gen"
path = "src/lib.rs"

[[bin]]
name = "medusa-gen"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.92"
askama = "0.12.1"
clap = { version = "4.5.20", features = ["cargo", "derive"] }
fs_extra = "1.3.0"
serde_json = "1.0.133"
tempfile = "3.13.0"

[dev-dependencies]
serial_test = "3.2.0"
